--- a/vue-cli/package.json
+++ b/vue-cli/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "vuetesting",
-  "description": "First practice using VueJS",
+  "name": "vue-cli",
+  "description": "A Vue.js project",
   "version": "1.0.0",
-  "author": "me",
+  "author": "Chris Law <claw@spindogs.com>",
   "license": "MIT",
   "private": true,
   "scripts": {
@@ -30,6 +30,6 @@
     "vue-loader": "^13.0.5",
     "vue-template-compiler": "^2.4.4",
     "webpack": "^3.6.0",
-    "webpack-dev-server": "^3.1.11"
+    "webpack-dev-server": "^2.9.1"
   }
 }
